Fix right alignment and spacing of icon row and language selector

--- a/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
+++ b/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
@@ -174,11 +174,12 @@ body.modal-open[style] {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-width: 250px;
+    min-width: 200px;
     height: 100%;
 }
 .tasks-icons > .fa {
     margin-right: 2px;
+    margin-left: 2px;
     cursor: pointer;
 }
 
